2005-07-25  Archie Cobbs  <archie@dellroad.org>

	* native/jni/classpath/native_state.c: add assertion for object type

2005-07-25  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicTableUI.java:
	(KeyHandler.advanceSingleSelection): New method.  Helper method for 
	ENTER, SHIFT-ENTER, TAB, and SHIFT-TAB key events.
	(KeyHandler.advanceMultipleSelection): Likewise, used when the table
	has multiple selections at the time that ENTER or TAB was pressed.
	(KeyHandler.keyPressed): Implemented TAB, SHIFT-TAB, and SHIFT-ENTER
	and merged these with existing code for ENTER event, because of the
	similarites.

2005-07-25  Tom Tromey  <tromey@redhat.com>

	* java/text/CollationKey.java (equals): Use Arrays.equals.
	PR classpath/22986.

2005-07-25  Tom Tromey  <tromey@redhat.com>

	* java/util/Properties.java (load): Handle case where backslash
	appears at EOF when reading the key.  PR classpath/22994.

2005-07-25  Lillian Angel  <langel@redhat.com>
	
	* javax/swing/plaf/basic/BasicTreeUI.java
	(paint): moved code to paintNode
	(getCellBounds): width increased, slightly short before
	(paintNode): changed to paint node depending if icons exist

2005-07-25  Guilhem Lavaux  <guilhem@kaffe.org>

        * native/jni/classpath/jcl.c,
        native/jni/classpath/jcl.h
        (JCL_NewRawDataObject): New function.
        (JCL_GetRawData): New function.

2005-07-25  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/awt/Container.java:
	(setFocusTraversalKeys): Instantiate focusTraversalKeys to an array of
	size 4, not 3.  This must have been a typo.

2005-07-25  Jeroen Frijters  <jeroen@frijters.net>

	* java/rmi/server/RMIClassLoader.java
	(loadClass(String, String)): Use Class.forName() instead of
	directly calling ClassLoader.loadClass(), to handle array
	types correctly.

2005-07-25  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/JTable.java:
	(selectAll): Store the lead selection indices and restore them after
	selecting all cells.